--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@nuxtjs/bulma": "^1.2.1",
     "axios": "^0.19.0",
     "bulma": "^0.8.0",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "vue-router": "^3.1.3"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.0.1",
