--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "axios": "^0.19.0",
     "bulma": "^0.8.0",
     "nuxt": "^2.0.0",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.0.1",
